objects/CMN_ObjectShareConfiguration__c.object
<CustomObject>
    <description>Will store configuration that is used by the Apex Sharing Framework to determine which records (owned by a user) to share with other users.</description>
    <fields>
        <fullName>CMN_AccessLevel__c</fullName>
        <description>This denotes that access level to set the Apex Share too. i.e. An access level of read will ensure the user gets read access to the object</description>
        <inlineHelpText>Specify the Access Level to be granted: Read, Edit, All</inlineHelpText>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                    <default>true</default>
                    <label>Read</label>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_ObjectAPIName__c</fullName>
        <description>API Name of the object for which sharing is being configured</description>
        <inlineHelpText>API Name of the object for which sharing is being configured</inlineHelpText>
        <label>Object API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ShareFromId__c</fullName>
        <description>Id of the user who is granting access to the records. This field will be set by a flow and will be used in Matching / Duplicate Rule.</description>
        <inlineHelpText>Id of the user who is granting access to the records. This field will be set by a flow and will be used in Matching / Duplicate Rule.</inlineHelpText>
        <label>Share From Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ShareFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specify the user who is granting access to the records</description>
        <inlineHelpText>Specify the user who is granting access to the records</inlineHelpText>
        <label>Share From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ShareFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMN_ShareWithId__c</fullName>
        <description>If of the user who should be granted access to the records. This field will be set by a flow and will be used in Matching / Duplicate Rule.</description>
        <inlineHelpText>If of the user who should be granted access to the records. This field will be set by a flow and will be used in Matching / Duplicate Rule.</inlineHelpText>
        <label>Share With Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ShareWith__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specify the user who should be granted access to the records</description>
        <inlineHelpText>Specify the user who should be granted access to the records</inlineHelpText>
        <label>Share With</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ShareWith</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Object Share Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CMN_ObjectAPIName__c</columns>
        <columns>CMN_ShareFrom__c</columns>
        <columns>CMN_ShareWith__c</columns>
        <columns>CMN_AccessLevel__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OSC-{000000}</displayFormat>
        <label>Object Share Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Shares Configuration</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CMN_PreventChangesToFields</fullName>
        <active>true</active>
        <description>Prevent Object API Name, Share From and Share With fields from being modified after the record is created.</description>
        <errorConditionFormula>OR
(
				ISCHANGED(CMN_ObjectAPIName__c),
				ISCHANGED(CMN_ShareFrom__c),
				ISCHANGED(CMN_ShareWith__c)
)</errorConditionFormula>
        <errorMessage>Object API Name, Share From and Share With fields cannot be modified after the record is created. Rather delete old records and create new records.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMN_PreventSameShareFromShareWith</fullName>
        <active>true</active>
        <description>Prevent same User selected for Share From and Share With fields.</description>
        <errorConditionFormula>CMN_ShareFrom__c = CMN_ShareWith__c</errorConditionFormula>
        <errorMessage>Same User cannot be selected for both Share From and Share With fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMN_ShareWithMustBeActive</fullName>
        <active>true</active>
        <description>The the user defined in the ShareWith field must be active. Records may only be shared with Active users</description>
        <errorConditionFormula>CMN_ShareWith__r.IsActive = FALSE</errorConditionFormula>
        <errorDisplayField>CMN_ShareWith__c</errorDisplayField>
        <errorMessage>Records can only be shared with Active Users</errorMessage>
    </validationRules>
</CustomObject>